--- a/hugo.toml
+++ b/hugo.toml
@@ -2,20 +2,11 @@ baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme ='paper'
+paginate = 10
 
 [params]
   # color style
   color = 'linen'                           # linen, wheat, gray, light
-
-  # header social icons
-  twitter = 'ksridhar02'               # twitter.com/YOUR_TWITTER_ID
-  github = 'sridhar02'                 # github.com/YOUR_GITHUB_ID
-  linkedin = 'YOUR_LINKEDIN_ID'             # linkedin.com/in/YOUR_LINKEDIN_ID
-
-  # home page profile
-  avatar = 'GRAVATAR_EMAIL'                 # gravatar email or image url
-  name = 'YOUR_NAME'
-  bio = 'YOUR_BIO'
 
 
   # misc
