--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hyd-events.pages.dev'
+baseURL = 'https://hyd-events.pages.dev'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme ='paper'
@@ -8,7 +8,7 @@ paginate = 10
   # color style
   color = 'linen'                           # linen, wheat, gray, light
   formAPI='http://localhost:8080/http://localhost:9000/api/subscribers'
-  googleAnalytics = "G-XXXXXXXX"
+  googleAnalytics = 'G-XXXXXXXX'
 
 
 
