--- a/themes/paper/exampleSite/config.toml
+++ b/themes/paper/exampleSite/config.toml
@@ -6,6 +6,7 @@ paginate = 3
 languageCode = "en"
 DefaultContentLanguage = "en"
 enableInlineShortcodes = true
+googleAnalytics = "G-727NLMKDW2"
 # prevent build failures when using Hugo's Instagram shortcode due to deprecated Instagram API.
 # See https://github.com/gohugoio/hugo/issues/7228#issuecomment-714490456
 ignoreErrors = ["error-remote-getjson"]
